# distributed-file-system

./: .env.example  .gitignore  Dockerfile  README.md  client.sh  docker-compose.yml  pyproject.toml  requests.sh  requirements.txt
helenite/chunkserver/: __main__.py  config.py
helenite/client/: __main__.py  config.py  helenite_client.py
helenite/core/: core_pb2.py  core_pb2.pyi  core_pb2_grpc.py
helenite/master/: __main__.py  config.py  master_pb2.py  master_pb2.pyi  master_pb2_grpc.py
proto/helenite/core/: core.proto
proto/helenite/master/: master.proto
tests/: test_write_file.py
